//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  username String [not null]
  active Boolean [not null]
  chatId String [unique]
  role Role [not null]
  chat Chat
  comments Message [not null]
  ownedProjects Project [not null]
  projects ProjectsOnUsers [not null]
  createdTasks Task [not null]
  assignedTasks UserAssignedTasks [not null]
  workspaces Workspace
  User_B User [not null]
  User_A User [not null]
}

Table Task {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  projectId String
  creatorId String
  parentId String
  status String [not null, default: 'TODO']
  details String [not null]
  chatId String [unique]
  chat Chat
  creator User
  parent Task
  project Project
  subTasks Task [not null]
  assignes UserAssignedTasks [not null]
}

Table Space {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  viewId String [unique, not null]
  projectId String [not null]
  settingsId String [unique, not null]
  spaceType String [not null]
  parentId String
  chatId String [unique]
  chat Chat
  parent Space
  project Project [not null]
  settings SpaceSettings [not null]
  view SpaceView [not null]
  subspaces Space [not null]
}

Table SpaceView {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  localId String [not null]
  spaceId String [not null]
  space Space
}

Table SpaceSettings {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  localId String [not null]
  spaceId String [not null]
  space Space
}

Table Project {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  description String
  settingsId String [unique, not null]
  workspaceId String [not null]
  ownerId String [not null]
  chatId String [unique]
  chat Chat
  owner User [not null]
  settings ProjectSettings [not null]
  workspace Workspace [not null]
  users ProjectsOnUsers [not null]
  spaces Space [not null]
  tasks Task [not null]
}

Table ProjectSettings {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  localId String [not null]
  projectId String [not null]
  project Project
}

Table Workspace {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  settingsId String [unique, not null]
  userId String [unique, not null]
  settings WorkspaceSettings [not null]
  user User [not null]
  projects Project [not null]
}

Table WorkspaceSettings {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  localId String [not null]
  workspaceId String [not null]
  workspace Workspace
}

Table ProjectsOnUsers {
  projectId String [not null]
  userId String [not null]
  assignedAt DateTime [default: `now()`, not null]
  assignedBy String [not null]
  project Project [not null]
  user User [not null]

  indexes {
    (projectId, userId) [pk]
  }
}

Table UserAssignedTasks {
  taskId String [not null]
  userId String [not null]
  assignedAt DateTime [default: `now()`, not null]
  assignedBy String [not null]
  task Task [not null]
  user User [not null]

  indexes {
    (taskId, userId) [pk]
  }
}

Table Message {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  contentType String [not null, default: 'string']
  type String [not null, default: 'message']
  senderId String
  parentId String
  chatId String [not null]
  chat Chat [not null]
  parent Message
  sender User
  subMessages Message [not null]
}

Table Chat {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  messages Message [not null]
  Project Project
  Space Space
  Task Task
  User User
}

Table UserFollows {
  user_bId String [ref: > User.id]
  user_aId String [ref: > User.id]
}

Enum Role {
  ADMIN
  USER
}

Ref: User.chatId - Chat.id

Ref: Task.chatId - Chat.id

Ref: Task.creatorId > User.id

Ref: Task.parentId - Task.id

Ref: Task.projectId > Project.id

Ref: Space.chatId - Chat.id

Ref: Space.parentId - Space.id

Ref: Space.projectId > Project.id

Ref: Space.settingsId - SpaceSettings.id

Ref: Space.viewId - SpaceView.id

Ref: Project.chatId - Chat.id

Ref: Project.ownerId > User.id

Ref: Project.settingsId - ProjectSettings.id

Ref: Project.workspaceId > Workspace.id

Ref: Workspace.settingsId - WorkspaceSettings.id

Ref: Workspace.userId - User.id

Ref: ProjectsOnUsers.projectId > Project.id

Ref: ProjectsOnUsers.userId > User.id

Ref: UserAssignedTasks.taskId > Task.id

Ref: UserAssignedTasks.userId > User.id

Ref: Message.chatId > Chat.id

Ref: Message.parentId - Message.id

Ref: Message.senderId > User.id